ho aggiunto le immagini al carosello

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           <li><a href="#" onclick="changeLanguage('Français')">Français</a></li>
 		</ul>
 	</div>
+
+  
 	<div>
 		<!-- Qui inserire il contenuto della pagina -->
 	</div>
@@ -42,8 +44,13 @@
   <h1>C E N T R O R E M I E R O</h1>
   <p>Benvenuti nel centro Remiero!!</p>
 </div>
-   <img src="https://static.wixstatic.com/media/76bff0_6c6df45f0c5e4121b54abf0cd1397f6d~mv2.jpg/v1/fill/w_672,h_234,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/76bff0_6c6df45f0c5e4121b54abf0cd1397f6d~mv2.jpg" alt="centro remiero" class="img2">
-   <img src="https://static.wixstatic.com/media/76bff0_93055e40dfb041b6b6c5cffdc7b4cce9~mv2.jpg/v1/fill/w_672,h_234,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/76bff0_93055e40dfb041b6b6c5cffdc7b4cce9~mv2.jpg" alt="centro remiero" class="img2">
+<div class="carousel">
+  <div class="carousel-item"></div>
+  <div class="carousel-item"></div>
+  <div class="carousel-item"></div>
+</div>
+
+  
       </div>
       
     </figure>
