--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
                 <div class="card-container">
                   <div class="polaroid-card">
-                    <img src="path_to_image1.jpg" alt="Immagine Polaroid 1">
+                    <img src="" alt="Immagine Polaroid 1">
                     <div class="caption">Testo della scritta 1</div>
                   </div>
                   <div class="polaroid-card">
-                    <img src="path_to_image2.jpg" alt="Immagine Polaroid 2">
+                    <img src="https://static.wixstatic.com/media/76bff0_b3fd96ac56a940ea91501d433778bc57~mv2.jpg/v1/fill/w_600,h_462,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/logo%20rowing%20winter%20challenge%20no%20letters.jpg" alt="Immagine Polaroid 2">
                     <div class="caption">Testo della scritta 2</div>
                   </div>
                   <div class="polaroid-card">
